syntax = "proto3";

package matchers;

option go_package = "./api/grpc/matchers";

import "api/grpc/matchers/matcher.proto";
import "google/protobuf/empty.proto";

service Service {
  rpc Create(CreateRequest) returns (MatcherData);
  rpc LockCreate(LockCreateRequest) returns (google.protobuf.Empty);
  rpc UnlockCreate(UnlockCreateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  string key = 1;
  string patternSrc = 2;
}

message LockCreateRequest {
  bytes patternCode = 1;
}

message UnlockCreateRequest {
  bytes patternCode = 1;
}

message DeleteRequest {
  MatcherData matcher = 1;
}
